fix background on iphones

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -8,6 +8,11 @@ $background-color-secondary: $color-primary;
 
 // base elements
 
+html {
+  height: 100vh;
+  position: fixed;
+}
+
 html,
 body {
   scroll-behavior: smooth;
